--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,8 @@ body{
     text-align:center;
     padding:50px;
     position: relative;
-    top:-10px;
+    top:-22px;
+    background: grey;
 }
 .testimonial .title{
     text-transform: uppercase;
@@ -84,6 +85,9 @@ body{
     width: 100%;
     text-align: center;
     padding: 50px;
+    position: relative;
+    top:-22px;
+    background: darkcyan;
     font-family: Arial, Helvetica, sans-serif
 }
 
@@ -112,6 +116,8 @@ body{
     width: 100%;
     padding: 50px;
     background-color: #ccc;
+    position: relative;
+    top:-22px;
 }
 
 .events .cards {
@@ -156,9 +162,12 @@ body{
 }
 .footer {
     width:100%;
+    height:auto;
     padding:50px;
     text-align:center;
     background:darkcyan;
+    position: relative;
+    top:-22px;
     font-family: Arial, Helvetica, sans-serif;
 }
 .footer .footer-title{
@@ -244,6 +253,13 @@ body{
         width:100%;
         padding-top:20px;
         margin:0;
+    }
+    .footer .form{
+        display:block;
+    }
+    .footer .form input,textarea{
+        margin-top:20px;
+        width:100%;
     }
     .footer .form input[type='submit']{
         grid-column: span 3;
